typos and small changes

--- a/results.tex
+++ b/results.tex
@@ -67,7 +67,7 @@ On \Cref{fig_fa_ar}, the five curves correspond to the following cell aspect
 ratios: $\frac{Y}{X}=\frac{1}{16}$, $\frac{Y}{X}=\frac{1}{4}$,
 $\frac{Y}{X}=1$, $\frac{Y}{X}=4$, $\frac{Y}{X}=16$, and $\frac{Y}{X}=100$.
 We note that the MIP-DSA scheme is stable for every aspect ratio tested, including 100, 
-and that the maximum spectral radius shows little sensitivity the aspect ratio.
+and that the maximum spectral radius shows little sensitivity to the aspect ratio.
 \begin{figure}[!htbp]
   \centering
   \includegraphics[width=0.7\textwidth]{aspect_ratio_9999_2}
@@ -315,7 +315,7 @@ where the blue cells are quadrilaterals, the green cells are pentagons, and
 the red cells are hexagons. This mesh is typical of a mesh obtained after one 
 level of adaptive mesh
 refinement (the cells at the interface of different materials have been refined
-once). We see that instead of introducing hanging nodes, we have introduce
+once). We see that instead of introducing hanging nodes, we have introduced
 pentagons and hexagons in the mesh.
 \begin{table}[H]
   \caption{Comparison of preconditioners on AMR mesh}
