--- a/mip.tex
+++ b/mip.tex
@@ -66,7 +66,7 @@ between two iterations, $Q_0=\Sigma_s\(\Phi^{(\ell+1/2)}-\Phi^{(\ell)}\)$,
 %|\bo_m \cdot \bs{n}_b| \delta \psi_d$, 
 %
 and the known incoming angular flux from the transport problem translates into the diffusion
-vaccum boundary condition given in \eqt{eq:dsa-bc}, where {$\partial_{n} = \bs{n}\cdot \bn$
+vacuum boundary condition given in \eqt{eq:dsa-bc}, where $\partial_{n} = \bs{n}\cdot \bn$
 and $\bs{n}$ is the outer normal unit vector on the domain's boundary, $\partial \mc{D}$. 
 %
 %where
