Add pictures and silo files.

--- a/results.tex
+++ b/results.tex
@@ -128,6 +128,10 @@ We note that using different spatial cell types in the same grid does not affect
 the performance of MIP-DSA or that of its preconditioners.
 
 \textcolor{red}{why is the min value in the colorbar different for these 2 grids??? The grids seem refined enough ....}
+\textcolor{green}{Il n'y a qu'une cellule sur le coin inferieur gauche qui plonge un peu
+  plus que les autres. Je ne sais pas si c'est parce que les cellules font
+  qu'il y legerement plus de fuite ou a cause du critere de convergence. Je ne
+pense pas que ce soit significatif.}
 
 \textcolor{red}{also, add the vtk to the repo in case I would like to do a zoom in to better show the quadrilateral/polygonal cells}
 %
