more final touches to the paper

--- a/mip.tex
+++ b/mip.tex
@@ -8,7 +8,7 @@
 \subsection{DSA Solution Principle}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-As noted earlier standard iterative techniques applied to transport solves 
+As noted earlier, standard iterative techniques applied to transport solves 
 can be slowly converging in thick diffusive configurations. A DSA scheme 
 must be employed to accelerate their convergence.
 The idea behind synthetic acceleration is that the error between the (yet
