trying to compile on campus ...

--- a/introduction.tex
+++ b/introduction.tex
@@ -31,7 +31,7 @@ discretization can handle locally adapted meshes without any special treatment
 or further approximation of the coupling between cells.
 \begin{figure}[H]
    \centering
-   \includegraphics[width=0.3\textwidth]{amr.png}
+   \includegraphics[width=0.3\textwidth]{fig_amr.png}
    \caption{AMR mesh.}
    \label{fig_amr}
 \end{figure}
