--- a/MIP_on_arbitrary_mesh.tex
+++ b/MIP_on_arbitrary_mesh.tex
@@ -54,7 +54,7 @@
 
 \begin{document}
 \title{Discontinuous Diffusion Synthetic Acceleration for \sn Transport on
-2D Arbitrary Polygonal Meshes}
+2D Polygonal Meshes}
 \author{} 
 \date{}
 \maketitle
