--- a/biblio.bib
+++ b/biblio.bib
@@ -1006,3 +1006,12 @@
   number = {3},
   pages = {856-869}
 }
+
+@book{Kanschat2007,
+  title = {Discontinuous Galerkin Methods for Viscous Incompressible Flow},
+  publisher = {Teubner Research},
+  year = {2007},
+  author = {G. Kanschat},
+  series = {Advances in Numerical Mathematics},
+  address = {Wiesbaden, Germany},
+}
