--- a/results.tex
+++ b/results.tex
@@ -10,31 +10,31 @@ for an homogeneous infinite medium meshed with rectangular cells and discretized
 The effects of the $S_n$ order and the cell aspect ratio on the spectral radius of the iterative 
 scheme are also studied. Second, the MIP-DSA technique is implemented in a 2D \sn code that uses
 arbitrary polygonal grids with a PWLD spatial discretization.  Numerical examples employ
-several meshes: arbitrary quadrilaterals, arbitrary polygons, a regular layout of 
+several mesh types: arbitrary quadrilaterals, arbitrary polygons, a regular layout of 
 hexagons/triangles/rectangles, and a grid that mimics adaptive mesh refinement 
 performed on rectangular cells. The MIP-DSA diffusion solves are performed using various
 linear solvers: Conjugate Gradient (CG), Conjugate Gradient
 Preconditioned with Symmetric Gauss-Seidel (PCG-SGS), Conjugate Gradient
 Preconditioned with ML using Uncoupled aggregation (PCG-ML/U),
 Conjugate Gradient Preconditioned with ML using MIS aggregation (PCG-ML/MIS),
-and Conjugate Gradient Preconditioned AGMG (AGMG). 
+and Conjugate Gradient Preconditioned with AGMG (AGMG). 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Fourier Analyses}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 Fourier analyses are often performed to assess some of the properties of 
-DSA-accelerated transport solves \cite{larsen_dsa,consistent_p1,more}. In a Fourier analysis,
+DSA-accelerated transport solves \cite{dsa_ref,larsen_dsa,consistent_p1}. In a Fourier analysis,
 the eigenvalues of the iteration matrix are analyzed, assuming a Fourier ansatz for the 
-error modes \cite{}. For instance, the iteration matrices for the SI and SI+DSA schemes are given by
+error modes. Specifically, the iteration matrices for the SI and SI+DSA schemes are given by
 \begin{equation}
 \bs{D L^{-1}M \Sigma} \quad \text{and} \quad \bs{I}-\bs{(I+A^{-1}\Sigma)(I-D L^{-1}M \Sigma)},
 \end{equation}
-respectively. \textcolor{red}{check that} The error modes are of the form $\exp(i \bs{\Lambda} \cdot \bs{r})$, with the
-wave number $\bs{\Lambda}=[\lambda_x,\, \lambda_y]^T$. The expressions for these modes 
-are inserted into the discretized equations and the spectral radius (largest eigenvalue in magnitude)
+respectively.  The error modes are of the form $\exp(i \bs{\Lambda} \cdot \bs{r})$, with the
+wave number $\bs{\Lambda}=[\lambda_x,\, \lambda_y]^T$. This expression for the error modes 
+is inserted into the discretized equations and the spectral radius (largest eigenvalue in magnitude)
 of the iteration matrices are sought for $0 \le \lambda_x \le 2\pi/X$ and $0 \le \lambda_y \le 2\pi/Y$,
-where $X$, and $Y$ are the dimensions of the rectangular domain.
+where $X$ and $Y$ are the dimensions of the rectangular domain.
 
 
 \subsubsection{Spectral radius as a function of the $S_n$ order}
@@ -48,9 +48,9 @@ paths and the $y-$axis is the spectral radius. There are four curves correspondi
 to different $S_n$ orders: $S_2$, $S_4$, $S_8$ and $S_{16}$.
 From \Cref{fig_fa_sn}, we conclude that MIP is stable for every 
 cell size. The spectral radius is always less than 0.5, except for $S_2$ where 
-it is about 0.7. In the fine mesh limit, the spatial continuum results are recovered:
-the spectral radius of SI+DSA using an $S_2$ quadrature in 2D is $0.5c$; as the angular 
-quadrature is refined, the standard result of $0.2247c$ for the spectral result is obtained.
+it is about 0.7. In the fine mesh limit, the spatial continuum results are recovered \cite{multisweep}:
+the spectral radius of SI+DSA using an $S_2$ quadrature in 2D undiscretized space is $0.5c$; as the angular 
+quadrature is refined, the standard limit value of $0.2247c$ for the spectral result is obtained.
 \begin{figure}[!htbp]
   \centering
   \includegraphics[width=0.7\textwidth]{sn_order_9999}
@@ -64,9 +64,10 @@ quadrature is refined, the standard result of $0.2247c$ for the spectral result 
 For this Fourier analysis, we use a $S_{16}$ GLC quadrature. The medium is
 again homogeneous with $c=0.9999$ and periodic boundary conditions apply. 
 On \Cref{fig_fa_ar}, the five curves correspond to the following cell aspect 
-ratios: $\frac{Y}{X}=\frac{1}{16}$, $\frac{Y}{X}=\frac{1}{4}$,
-$\frac{Y}{X}=1$, $\frac{Y}{X}=4$, $\frac{Y}{X}=16$, and $\frac{Y}{X}=100$.
-We note that the MIP-DSA scheme is stable for every aspect ratio tested, including 100, 
+ratios: $\frac{Y}{X}=\frac{1}{16}$, $\frac{1}{4}$,
+$1$, $4$, $16$, and $100$.
+We note that the MIP-DSA scheme is stable for every aspect ratio tested, including an
+aspect ratio value of 100, 
 and that the maximum spectral radius shows little sensitivity to the aspect ratio.
 \begin{figure}[!htbp]
   \centering
@@ -92,7 +93,7 @@ use an $S_8$ GLC angular quadrature, Source Iteration as solver
 with relative tolerance of $10^{-8}$ and a relative tolerance of
 $10^{-10}$ for MIP-DSA solver. The medium is discretized using two different meshes:
 \begin{enumerate}
-  \item a quadrilateral gridcomposed of 49263 quadrilateral
+  \item a quadrilateral grid composed of 49263 quadrilateral
     cells (197,052 degrees of freedom); 
   \item a polygonal grid composed of 45,204 triangles, 823
     quadrilaterals, 4,978 pentagons, 4,155 hexagons, 725 heptagons, and 24
@@ -101,7 +102,7 @@ $10^{-10}$ for MIP-DSA solver. The medium is discretized using two different mes
     mesh composed of different cell types.
 \end{enumerate}
 %
-The meshes and the numerical solutions are given on \Cref{homog_test}.
+The meshes and the numerical solutions are given on \Cref{homog_test_quads,homog_test_polys}.
 In \Cref{comparison_homog_quad}, results obtained with the different linear solvers for MIP-DSA 
 are compared for the quadrilateral grid.
 In \Cref{comparison_homog_quad}, SI iterations is the number iterations of 
@@ -127,29 +128,54 @@ The different linear solvers are compared for the polygonal grid in \Cref{compar
 We note that using different spatial cell types in the same grid does not affect
 the performance of MIP-DSA or that of its preconditioners.
 
-\textcolor{red}{why is the min value in the colorbar different for these 2 grids??? The grids seem refined enough ....}
-\textcolor{green}{Il n'y a qu'une cellule sur le coin inferieur gauche qui plonge un peu
-  plus que les autres. Je ne sais pas si c'est parce que les cellules font
-  qu'il y legerement plus de fuite ou a cause du critere de convergence. Je ne
-pense pas que ce soit significatif.}
-
-\textcolor{red}{also, add the vtk to the repo in case I would like to do a zoom in to better show the quadrilateral/polygonal cells}
-%
 \begin{figure}[!htbp]
   \centering
-  \begin{subfigure}{0.75\textwidth}
+  \begin{subfigure}{0.45\textwidth}
     \centering
-    \includegraphics[width=\textwidth]{big_homog_quad_crop}
-    \caption{Quadrilateral cells}
+    \includegraphics[width=\textwidth]{quad_solu0000}
+    \caption{Whole domain}
   \end{subfigure}
-  \begin{subfigure}{0.75\textwidth}
+  \begin{subfigure}{0.45\textwidth}
     \centering
-    \includegraphics[width=\textwidth]{big_homog_poly_crop}
-    \caption{Polygonal cells}
+    \includegraphics[width=\textwidth]{quad_solu0001}
+    \caption{Zoom}
   \end{subfigure}
-  \caption{Grids and scalar flux solutions for the homogenous material test problem}
-  \label{homog_test}
+  \caption{Grids and scalar flux solutions for the homogenous test problem using quadrilaterla cells}
+  \label{homog_test_quads}
 \end{figure}
+
+\begin{figure}[!htbp]
+  \centering
+  \begin{subfigure}{0.45\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{polygon_solu0000}
+    \caption{Whole domain}
+  \end{subfigure}
+  \begin{subfigure}{0.45\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{polygon_solu0001}
+    \caption{Zoom}
+  \end{subfigure}
+  \caption{Grids and scalar flux solutions for the homogenous test problem  using arbitrary polygonal cells}
+  \label{homog_test_polys}
+\end{figure}
+
+%
+%\begin{figure}[!htbp]
+  %\centering
+  %\begin{subfigure}{0.75\textwidth}
+    %\centering
+    %\includegraphics[width=\textwidth]{big_homog_quad_crop}
+    %\caption{Quadrilateral cells}
+  %\end{subfigure}
+  %\begin{subfigure}{0.75\textwidth}
+    %\centering
+    %\includegraphics[width=\textwidth]{big_homog_poly_crop}
+    %\caption{Polygonal cells}
+  %\end{subfigure}
+  %\caption{Grids and scalar flux solutions for the homogenous material test problem}
+  %\label{homog_test}
+%\end{figure}
 %
 \begin{table}[!htbp]
   \begin{center}
@@ -193,9 +219,6 @@ Total calculation (s) & 42666.7 & 1060.53 & 1447.53 & 382.275 & 384.422 &
 \subsubsection{Heterogeneous medium}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\textcolor{red}{why not make this problem thick? DSA is almost useless ....\\}
-\textcolor{red}{also, add the vtk to the repo in case I would like to do a zoom in to better show the cells}
-
 In this example, a heterogeneous geometry with three materials is used. It is 
 composed of 184 triangles, 3,720 quadrilaterals and 2,791 regular hexagons of 
 side $0.05cm$ for a total of 6,695 cells and 32,178 degrees of freedom (spatial 
@@ -209,17 +232,26 @@ The different linear solvers for MIP-DSA are compared in \Cref{comparison_hex}.
 %
 \begin{figure}[!htbp]
   \centering
-  \includegraphics[width=0.6\textwidth]{source_crop}
+  \begin{subfigure}{0.45\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{hexa_grid0000}
+    \caption{Whole domain}
+  \end{subfigure}
+  \begin{subfigure}{0.45\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{hexa_grid0001}
+    \caption{Zoom}
+  \end{subfigure}
   \caption{Material zones for the heterogeneous test problem}
   \label{hex_zones}
 \end{figure}
 %
 \begin{table}[!htbp]
   \begin{center}
-    \caption{Properties of the different zones}
+    \caption{MAterial Properties For the Different Regions}
     \begin{tabular}{|c|c|c|c|}
       \hline
-       & Inner region & Intermediate region & Outer region \\
+       & Inner region & Intermediate region & Outer region \\ \hline
       $\Sigma_t$ $(cm^{-1})$ & 1.5 & 1.0 & 1.0 \\
       $\Sigma_s$ $(cm^{-1})$ & 1.4999 & 0.999 & 0.3 \\
      source $(cm^{-3}s^{-1}$ & 1.0 & 0.0 & 0.0 \\
@@ -232,7 +264,7 @@ The different linear solvers for MIP-DSA are compared in \Cref{comparison_hex}.
 %
 \begin{table}[!htbp]
   \begin{center}
-    \caption{Comparison of preconditioners, heterogeneous problem}
+    \caption{Comparison of preconditioners (heterogeneous problem)}
     \begin{tabular}{|c|c|c|c|c|c|c|}
       \hline
       & No-DSA & CG & PCG-SGS & PCG-ML/U & PCG-ML/MIS & AGMG\\
@@ -261,9 +293,6 @@ significantly fewer iterations than the Trilinos implementations, PCG-ML/U and a
 \subsubsection{Locally refined grid}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\textcolor{red}{also, add the vtk to the repo in case I would like to do a zoom in to better show the cells}
-
-%\cite{mip}
 In this example, a 3-material domain of size $10cm\times 10cm$ is used. 
 \Cref{mat_amr} shows the material zoning and the mesh used. Material properties 
 are given in \Cref{prop_amr}. The grid used mimics meshes obtained via adaptive mesh
@@ -285,17 +314,17 @@ our previous tests. This test case demonstrates that degenerate polygons
 
 \begin{figure}[!htbp]
   \centering
-  \begin{subfigure}{0.75\textwidth}
+  \begin{subfigure}{0.45\textwidth}
     \centering
-    \includegraphics[width=6cm]{zone_amr}
+    \includegraphics[width=5cm]{zone_amr}
     \caption{Material regions}
-%    \label{mat_amr}
+    \label{mat_amr}
   \end{subfigure}
-  \begin{subfigure}{0.75\textwidth}
+  \begin{subfigure}{0.45\textwidth}
     \centering
-    \includegraphics[width=6cm]{polygon_amr}
-    \caption{Polygons distribution (the blue cells are quadrilaterals, the green cells are pentagons, and the red cells are hexagons)}
-%    \label{fig_pol_dist}
+    \includegraphics[width=5cm]{amr_grid0001}
+    \caption{Polygons distribution (zoom): quadrilaterals (blue cells),  pentagons(green cells),  hexagons (red cells)}
+    \label{fig_pol_dist}
   \end{subfigure}
   \caption{AMR-like test domain}
 \end{figure}
@@ -319,10 +348,10 @@ where the blue cells are quadrilaterals, the green cells are pentagons, and
 the red cells are hexagons. This mesh is typical of a mesh obtained after one 
 level of adaptive mesh
 refinement (the cells at the interface of different materials have been refined
-once). We see that instead of introducing hanging nodes, we have introduced
-pentagons and hexagons in the mesh.
+once). We see that instead of introducing hanging nodes, the mesh now contains 
+pentagons and hexagons.
 \begin{table}[H]
-  \caption{Comparison of preconditioners on AMR mesh}
+  \caption{Comparison of preconditioners for the AMR mesh}
   \begin{center}
     \begin{tabular}{|c|c|c|c|c|c|c|}
       \hline
@@ -361,7 +390,7 @@ affected by the change of aspect ratio and is again the best performing
 preconditioner.
 %
 \begin{table}[!htbp]
-  \caption{Comparison of preconditioners on rectangular grid with an aspect
+  \caption{Comparison of preconditioners for a rectangular grid with an aspect
   ratio of 1}
   \begin{center}
     \begin{tabular}{|c|c|c|c|c|c|c|}
@@ -384,7 +413,7 @@ Total calculation (s) & 7356.96 & 56.8993 & 98.2609 & 50.1247  & 51.5396 &
 \end{table}
 %
 \begin{table}[!htbp]
-  \caption{Comparison of preconditioners on rectangular grid with an aspect
+  \caption{Comparison of preconditioners for a rectangular grid with an aspect
   ratio of 100}
   \begin{center}
     \begin{tabular}{|c|c|c|c|c|c|c|}
