--- a/results.tex
+++ b/results.tex
@@ -148,12 +148,12 @@ the performance of MIP-DSA or that of its preconditioners.
   \centering
   \begin{subfigure}{0.45\textwidth}
     \centering
-    \includegraphics[width=\textwidth]{polygon_solu0000}
+    \includegraphics[width=\textwidth]{poly_solu0000}
     \caption{Whole domain}
   \end{subfigure}
   \begin{subfigure}{0.45\textwidth}
     \centering
-    \includegraphics[width=\textwidth]{polygon_solu0001}
+    \includegraphics[width=\textwidth]{poly_solu0001}
     \caption{Zoom}
   \end{subfigure}
   \caption{Grids and scalar flux solutions for the homogenous test problem  using arbitrary polygonal cells}
@@ -248,7 +248,7 @@ The different linear solvers for MIP-DSA are compared in \Cref{comparison_hex}.
 %
 \begin{table}[!htbp]
   \begin{center}
-    \caption{MAterial Properties For the Different Regions}
+    \caption{Material Properties For the Different Regions}
     \begin{tabular}{|c|c|c|c|}
       \hline
        & Inner region & Intermediate region & Outer region \\ \hline
@@ -320,7 +320,7 @@ our previous tests. This test case demonstrates that degenerate polygons
     \caption{Material regions}
     \label{mat_amr}
   \end{subfigure}
-  \begin{subfigure}{0.45\textwidth}
+  \begin{subfigure}{0.50\textwidth}
     \centering
     \includegraphics[width=5cm]{amr_grid0001}
     \caption{Polygons distribution (zoom): quadrilaterals (blue cells),  pentagons(green cells),  hexagons (red cells)}
