added personal comm reference

--- a/biblio.bib
+++ b/biblio.bib
@@ -1015,3 +1015,11 @@
   series = {Advances in Numerical Mathematics},
   address = {Wiesbaden, Germany},
 }
+
+@misc{wang_personal_comm,
+  author = "Yaqi Wang",
+  date = "2012/08/29",
+  howpublished = "Personal E-mail communication (2012-08-29)"
+}
+
+
